# get_hands_dirty

./: .gitignore  README.md
key_replacer_axum_api/: .env  .gitignore  Cargo.toml  REDME.md
key_replacer_axum_api/examples/deadpool-diesel-demo/: Cargo.toml
key_replacer_axum_api/examples/deadpool-diesel-demo/src/: main.rs
key_replacer_axum_api/examples/diesel-async-demo/: Cargo.toml
key_replacer_axum_api/examples/diesel-async-demo/src/: main.rs
key_replacer_axum_api/examples/diesel-async-pool-demo/: Cargo.toml
key_replacer_axum_api/examples/diesel-async-pool-demo/src/: main.rs
key_replacer_axum_api/examples/diesel-mysql-demo/: Cargo.toml
key_replacer_axum_api/examples/diesel-mysql-demo/migrations/2023-03-19-092945_create_posts/: up.sql
key_replacer_axum_api/examples/diesel-mysql-demo/src/: lib.rs  models.rs
key_replacer_axum_api/examples/todos/: Cargo.toml
key_replacer_axum_api/migrations/2023-03-21-082238_create_chars/: down.sql  up.sql
key_replacer_axum_api/src/: control.rs  lib.rs  main.rs  models.rs  schema.rs
rustcc_daily_scraper/: Cargo.toml
rustcc_daily_scraper/examples/: basic_scraper.rs  select_tutorial.rs  tokio_async_scraper.rs
scraper_collections/: Cargo.toml  README.md
scraper_collections/examples/: arc_mutex_tokio.rs  rbatis_tutorial_crud.rs  rbatis_tutorial_model.rs  rustcc_daily_scraper.rs  rustcc_daily_scraper_version2_extract_fns.rs  rustcc_daily_scraper_version2_page_extract.rs  rustcc_daily_scraper_version3_first_refactor.rs  rustcc_daily_scraper_version4_complete_data_structured.rs  rustcc_daily_scraper_version5_seq_async_not_concurrency.rs  rustcc_daily_scraper_version6_concurrency_design_spawn.rs  rustcc_daily_scraper_version7_parallelism_rayon_tokio_runtime.rs  rustcc_daily_scraper_version8_mpmc_queue_tokio.rs
scraper_collections/examples/sqls/: rustcc_table_sqlite.sql
scraper_collections/src/: lib.rs  rustcc_daily_models.rs
