[package]
name = "key_replacer_axum_api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.11" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
diesel = { version = "2.0.0", features = ["mysql"] }
#diesel = "2.0.0"
#deadpool-diesel = "0.4.1"
deadpool = "0.9.5"
diesel-async = { version = "0.2.1", features = ["mysql", "deadpool"] }
dotenvy = "0.15"

[dev-dependencies]
#for async test
tokio-test = "0.4.2"