[package]
name = "deadpool-diesel-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
tokio = { version = "1.0", features = ["full"] }
deadpool-diesel = { version = "0.4.1", features = ["mysql"] }
diesel = { version = "2.0.3", features = ["mysql"] }
