[package]
name = "diesel-async-pool-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
tokio = { version = "1.0", features = ["full"] }
diesel = {version = "2.0.0", features = ["mysql"]}
deadpool = "0.9.5"
diesel-async = { version = "0.2.1", features = ["deadpool", "mysql"] }

[dev-dependencies]
#for async test
tokio-test = "0.4.2"
